# discord-ext-voice-recv

./: pyproject.toml
discord/ext/voice_recv/: sinks.py
